테스트 목서버 적용